--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -6,7 +6,7 @@ on:
     - 3.x
   pull_request:
     branches:
-    - funnel
+    - master
   #schedule:
   #  - cron: '0 4 */1 * *' # At 04:00 on every day-of-month
   workflow_dispatch:
