--- a/.github/workflows/ci_vtests.yml
+++ b/.github/workflows/ci_vtests.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   run_vtests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
     - name: Clone repository
       uses: actions/checkout@v3
