--- a/mtest/CMakeLists.txt
+++ b/mtest/CMakeLists.txt
@@ -212,12 +212,13 @@ add_custom_target(mtest_build_and_install
 endif (NOT MSVC)
 
 add_custom_command (OUTPUT s7gen.h s7gen.cpp
-                    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- --mtest-gen -l ${PROJECT_SOURCE_DIR}/s7 -s ${CMAKE_CURRENT_SOURCE_DIR} ../s7/lib.scm gen.scm types.scm ../libmscore/types-gen.h.scm ms-objects.scm ms.scm decl.scm -o ${CMAKE_CURRENT_BINARY_DIR}/s7gen
+                    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${CMAKE_CURRENT_SOURCE_DIR} ../s7/lib.scm gen.scm types.scm ../libmscore/types-gen.h.scm ../libmscore/tremolo-gen.h.scm ../libmscore/property-gen.h.scm ms-objects.scm ms.scm decl.scm -o ${CMAKE_CURRENT_BINARY_DIR}/s7gen
                     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
                     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm
                             ${CMAKE_CURRENT_SOURCE_DIR}/gen.scm
                             ${CMAKE_CURRENT_SOURCE_DIR}/types.scm
                             ${PROJECT_SOURCE_DIR}/libmscore/types-gen.h.scm
+                            types-code.scm
                             ${CMAKE_CURRENT_SOURCE_DIR}/ms.scm
                             ${CMAKE_CURRENT_SOURCE_DIR}/ms-objects.scm
                             ${CMAKE_CURRENT_SOURCE_DIR}/decl.scm
@@ -230,15 +231,15 @@ add_custom_target(mtest_files ALL
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/mtest.scm ${CMAKE_CURRENT_BINARY_DIR}
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/types.scm ${CMAKE_CURRENT_BINARY_DIR}
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/s7/lib.scm ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_element.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_element.scm
+    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testrun.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_element.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_element.scm
 
-    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_note.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_note.scm
+    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testrun.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_note.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_note.scm
 
-    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_hairpin.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_hairpin.scm
+    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testrun.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_hairpin.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_hairpin.scm
 
-    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_breath.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_breath.scm
+    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testrun.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_breath.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_breath.scm
 
-    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testgen.scm -- -l ${PROJECT_SOURCE_DIR}/s7 ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_copypaste.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_copypaste.scm
+    COMMAND ${PROJECT_BINARY_DIR}/s7/s7 -f ${CMAKE_CURRENT_SOURCE_DIR}/testrun.scm -- -l ${PROJECT_SOURCE_DIR}/s7 -s ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/libmscore/tst_copypaste.scm -o ${CMAKE_CURRENT_BINARY_DIR}/libmscore/tst_copypaste.scm
 
     DEPENDS libmscore/tst_element.scm
             libmscore/tst_note.scm
