--- a/gen/CMakeLists.txt
+++ b/gen/CMakeLists.txt
@@ -16,7 +16,16 @@ add_custom_command(
     DEPENDS ${PROJECT_SOURCE_DIR}/libmscore/tremolo-gen.h.scm
     COMMENT "Generating libmscore/tremolo-gen.h from libmscore/tremolo-gen.h.scm"
 )
+add_custom_command(
+    OUTPUT ${PROJECT_BINARY_DIR}/libmscore/property-gen.h
+    COMMAND guile -l ${PROJECT_SOURCE_DIR}/gen/gen.scm --
+            ${PROJECT_SOURCE_DIR}/libmscore/property-gen.h.scm
+            ${PROJECT_BINARY_DIR}/libmscore/property-gen.h
+    DEPENDS ${PROJECT_SOURCE_DIR}/libmscore/property-gen.h.scm
+    COMMENT "Generating libmscore/property-gen.h from libmscore/property-gen.h.scm"
+)
 
 add_custom_target(generated_sources
   DEPENDS ${PROJECT_BINARY_DIR}/libmscore/types-gen.h
-          ${PROJECT_BINARY_DIR}/libmscore/tremolo-gen.h)
+          ${PROJECT_BINARY_DIR}/libmscore/tremolo-gen.h
+          ${PROJECT_BINARY_DIR}/libmscore/property-gen.h)
