--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -87,8 +87,7 @@ jobs:
     - name: Build       
       if: env.DO_BUILD == 'true'   
       run: |
-        T_ID=${{ secrets.TELEMETRY_TRACK_ID }}; if [ -z "$T_ID" ]; then T_ID="''"; fi
-        bash ./build/ci/macos/build.sh -n ${{ github.run_id }} --telemetry $T_ID
+        bash ./build/ci/macos/build.sh -n ${{ github.run_id }}
     - name: Package 
       if: env.DO_BUILD == 'true'
       run: |
