Mux task scheduler + MsgTypeSeqStartNoteDur
* generic Mux Task scheduler class
* send MsgTypeSeqStartNoteDur to internal queue

--- a/mux/CMakeLists.txt
+++ b/mux/CMakeLists.txt
@@ -25,6 +25,7 @@ add_library(mux STATIC
       #${PCH}
       mux.h mux.cpp
       muxqueue.h muxqueue.cpp
+      muxtaskv.h muxtaskv.cpp
       )
 
 #target_link_libraries (${MODULE}
