--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -1,120 +1,92 @@
-name: CI_MacOS
+name: build_macos
 
 on:
-  push:
-    branches:
-    - 3.x
-  pull_request:
-    branches:
-    - master
-  #schedule:
-  #  - cron: '0 4 */1 * *' # At 04:00 on every day-of-month
+  schedule:
+    - cron: '0 4 */7 * *'
   workflow_dispatch:
     inputs:
       build_mode:
-        description: 'Build mode: devel_build, nightly_build, testing_build, stable_build'
+        description: 'Build mode: devel_build, stable_build'
         required: true
         default: 'devel_build'
-      publish:
-        description: 'Publish to FTP: on - publish'
-        required: false
-        default: 'off'  
  
 env:
   DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
 
 jobs:
   build:    
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.11.0
       with:
         access_token: ${{ github.token }}
-    - name: Clone repository
+    - name: Clone repo main
       uses: actions/checkout@v3
       with:
-        fetch-depth: 3
-    - name: "Configure workflow"
+        ref: ci
+        path: m
+    - name: Setup
       run: |
-        bash ./build/ci/tools/make_build_mode_env.sh -e ${{ github.event_name }} -m ${{ github.event.inputs.build_mode }}
-        BUILD_MODE=$(cat ./build.artifacts/env/build_mode.env)
-
-        DO_PUBLISH='false'
-        if [[ "${{ github.event.inputs.publish }}" == "on" || "$BUILD_MODE" == "nightly_build" ]]; then 
-          DO_PUBLISH='true'
-          if [ -z "${{ secrets.OSUOSL_SSH_ENCRYPT_SECRET }}" ]; then 
-            echo "warning: not set OSUOSL_SSH_ENCRYPT_SECRET, publish disabled" 
-            DO_PUBLISH='false'
-          fi  
-        fi
-
-        DO_NOTARIZE='false'
-        if [ "$BUILD_MODE" != "devel_build" ]; then 
-          DO_NOTARIZE='true'
-          if [ -z "${{ secrets.APPLE_USERNAME }}" ]; then 
-            echo "warning: not set APPLE_USERNAME, notarize disabled" 
-            DO_NOTARIZE='false'
-          fi
-          if [ -z "${{ secrets.APPLE_PASSWORD }}" ]; then 
-            echo "warning: not set APPLE_PASSWORD, notarize disabled" 
-            DO_NOTARIZE='false'
-          fi 
-        fi
-
-        DO_BUILD='true'
-
-        echo "github.repository: ${{ github.repository }}"
-        echo "BUILD_MODE=$BUILD_MODE" >> $GITHUB_ENV
-        echo "BUILD_MODE: $BUILD_MODE"
-        echo "DO_BUILD=$DO_BUILD" >> $GITHUB_ENV
-        echo "DO_BUILD: $DO_BUILD"
-        echo "DO_NOTARIZE=$DO_NOTARIZE" >> $GITHUB_ENV
-        echo "DO_NOTARIZE: $DO_NOTARIZE"
-        echo "DO_PUBLISH=$DO_PUBLISH" >> $GITHUB_ENV
-        echo "DO_PUBLISH: $DO_PUBLISH"
-    
-    - name: Free disk space
-      if: env.DO_BUILD == 'true'
-      run: |
+        ls -ltr
+        cd m
+        ls -ltr
         sudo rm -rf "/Applications/Visual Studio.app"
         sudo rm -rf "/Applications/Visual Studio 2019.app"
         sudo rm -rf "/Users/runner/Library/Android/sdk"
-    - name: Setup environment
-      if: env.DO_BUILD == 'true'
+        ./build/ci/macos/setup.sh
+    - name: Build
       run: |
-        bash ./build/ci/macos/setup.sh
-    - name: Build       
-      if: env.DO_BUILD == 'true'   
-      run: |
-        bash ./build/ci/macos/build.sh -n ${{ github.run_id }}
+        cd m
+        ./build/ci/macos/build.sh
     - name: Package 
-      if: env.DO_BUILD == 'true'
       run: |
         S_S="${{ secrets.MAC_SIGN_CERTIFICATE_ENCRYPT_SECRET }}"; if [ -z "$S_S" ]; then S_S="''"; fi
         S_P="${{ secrets.MAC_SIGN_CERTIFICATE_PASSWORD }}"; if [ -z "$S_P" ]; then S_P="''"; fi
-        bash ./build/ci/macos/package.sh --signpass "$S_P" --signsecret "$S_S" 
-    - name: Notarize
-      if: env.DO_NOTARIZE == 'true'
-      run: |
-        USER=${{ secrets.APPLE_USERNAME }}; if [ -z "$USER" ]; then USER="''"; fi
-        PW=${{ secrets.APPLE_PASSWORD }}; if [ -z "$PW" ]; then PW="''"; fi
-        bash ./build/ci/macos/notarize.sh -u $USER -p $PW
-    - name: Checksum 
-      if: env.DO_BUILD == 'true'
-      run: |
-        bash ./build/ci/tools/checksum.sh    
-    - name: Publish package
-      if: env.DO_PUBLISH == 'true'
-      run: |
-        sudo bash ./build/ci/tools/osuosl/publish.sh -s ${{ secrets.OSUOSL_SSH_ENCRYPT_SECRET }} --os macos -v 3
-    - name: AppCast
-      if: env.DO_BUILD == 'true'
-      run: |
-        bash ./build/ci/tools/sparkle_appcast_gen.sh -p macos
-    - name: Upload artifacts on GitHub
-      if: env.DO_BUILD == 'true'
+        cd m
+        ./build/ci/macos/package.sh --signpass "$S_P" --signsecret "$S_S" 
+    - name: Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: MuseScore_${{ github.run_id }}
-        path: ./build.artifacts/
+        name: macos-musescore3
+        path: m/musescore3.tar.xz
+    - name: version
+      run: echo "::set-output name=version::$(date +%Y%m%d)"
+      id: version
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: release-macos-${{ steps.version.outputs.version }}
+        release_name: macos-${{ steps.version.outputs.version }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./m/musescore3.tar.xz
+        asset_name: musescore3.tar.xz
+        asset_content_type: application/zip
+  upload-weekly:
+    permissions:
+      contents: write
+    needs:
+      - build
+    if: github.ref == 'refs/heads/main'
+    runs-on: macos-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: macos-musescore3
+      - name: Upload musescore release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
+        run: |
+          gh release upload weekly-macos musescore3* --clobber -R ${{ github.repository }}
