--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         cd m
         ./build/ci/linux/package.sh
+        echo "musescore package is built:"
+        ls -ltr | grep musescore
         mv musescore3.tar.xz musescore3-${{matrix.runs-on}}.tar.xz
     - name: Artifact
       uses: actions/upload-artifact@v4
@@ -44,7 +46,7 @@ jobs:
         name: linux-musescore3
         path: m/musescore3.${{matrix.runs-on}}.tar.xz
     - name: version
-      run: echo "::set-output name=version::$(date +%Y%m%d)"
+      run: echo "version=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
       id: version
     - name: Create Release
       id: create_release
@@ -63,8 +65,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./m/musescore3-{{matrix.runs-on}}.tar.xz
-        asset_name: musescore3-{{matrix.runs-on}}.tar.xz
+        asset_path: ./m/musescore3-${{matrix.runs-on}}.tar.xz
+        asset_name: musescore3-${{matrix.runs-on}}.tar.xz
         asset_content_type: application/zip
   upload-weekly:
     permissions:
