--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         access_token: ${{ github.token }}
     - name: Clone repo main
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         ref: main
         path: m
@@ -46,12 +46,12 @@ jobs:
         cd m
         ./build/ci/macos/package.sh --signpass "$S_P" --signsecret "$S_S" 
     - name: Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: macos-musescore3
         path: m/musescore3.tar.xz
     - name: version
-      run: echo "::set-output name=version::$(date +%Y%m%d)"
+      run: echo "version=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
       id: version
     - name: Create Release
       id: create_release
@@ -81,9 +81,10 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: macos-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
         with:
-          name: macos-musescore3
+          pattern: macos-musescore3*
+          merge-multiple: true
       - name: Upload musescore release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
