--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -2,7 +2,7 @@ name: build_macos
 
 on:
   schedule:
-    - cron: '0 4 */7 * *'
+    - cron: '0 4 1 * *'
   workflow_dispatch:
     inputs:
       build_mode:
